# edge-ai-libraries

./: .gitmodules  README.md
libraries/edge-control-libraries/fieldbus/ecat-enablekit/: .gitignore  Doxyfile  Makefile.am  README.md  autogen.sh  configure.ac  libecat.pc.in
libraries/edge-control-libraries/fieldbus/ecat-enablekit/docs/: ecat_intro.md
libraries/edge-control-libraries/fieldbus/ecat-enablekit/eniconfig/: Makefile.am  enicommon.h  eniconfig.c  eniconfig.h  enicyclic.c  enicyclic.h  enimaster.c  enimaster.h  eniprocessimage.c  eniprocessimage.h  enislave.c  enislave.h  enitypes.c  enitypes.h
libraries/edge-control-libraries/fieldbus/ecat-enablekit/esiconfig/: Makefile.am  esicommon.h  esiconfig.c  esiconfig.h  esidescription.c  esidescription.h  esidevice.c  esidevice.h  esivendor.c  esivendor.h
libraries/edge-control-libraries/fieldbus/ecat-enablekit/examples/: Makefile.am  README
libraries/edge-control-libraries/fieldbus/ecat-enablekit/include/: Makefile.am  common.h  debug.h  list.h
libraries/edge-control-libraries/fieldbus/ecat-enablekit/libecat/: Makefile.am  motionentry.c  motionentry.h  motionutils.c  motionutils.h
libraries/edge-control-libraries/fieldbus/ecat-enablekit/tests/: Makefile.am  test-motionentry.c
libraries/edge-control-libraries/plcopen-motion-control/plcopen-motion/: .gitignore  CMakeLists.txt  Doxyfile  README.md  find_rtmotion.cmake  find_tcc.cmake  plcopen_header.cmake  plcopen_motion_deps.cmake  set_install_directories.cmake  xenomai_flags.cmake
libraries/edge-control-libraries/plcopen-motion-control/plcopen-motion/demo/: CMakeLists.txt  multi-axis-monitor.cpp  multi-axis-tcc-measure.cpp  multi-axis-tcc-ssram.cpp  multi-axis.cpp
libraries/edge-control-libraries/plcopen-motion-control/plcopen-motion/test/: CMakeLists.txt  function_block_test.cpp  io_operation_test.cpp  offline_scurve_test.cpp  online_scurve_test.cpp  planner_test.cpp  test-algorithm_fuzztest.cpp  test-axis_fuzztest.cpp  test-fbs_fuzztest.cpp  test-servo_fuzztest.cpp
libraries/edge-control-libraries/plcopen-motion-control/plcopen-servo/: .gitignore  CMakeLists.txt  README.md  find_enablekit.cmake  find_igh.cmake  find_plcopen_servo.cmake
libraries/edge-control-libraries/plcopen-motion-control/plcopen-servo/include/: ecrt_config.hpp  ecrt_io.hpp  ecrt_servo.hpp  symg_config.hpp  symg_servo.hpp
libraries/edge-control-libraries/plcopen-motion-control/plcopen-servo/src/: CMakeLists.txt  ecrt_io.cpp  ecrt_servo.cpp  symg_servo.cpp
libraries/edge-control-libraries/plcopen-motion-control/plcopen-servo/test/: CMakeLists.txt  duo_rtmotion_cam_demo.cpp  duo_rtmotion_demo.cpp  duo_rtmotion_gear_demo.cpp  duo_rtmotion_gear_in_pos_demo.cpp  ethercat_io_demo.cpp  six_rtmotion_demo.cpp  solo_mc_digital_cam_switch.cpp  solo_mc_home_demo.cpp  solo_mc_homing_demo.cpp  solo_mc_jog_demo.cpp  solo_mc_move_absolute.cpp  solo_mc_move_additive.cpp  solo_mc_move_relative.cpp  solo_mc_move_superimposed_demo.cpp  solo_mc_move_velocity.cpp  solo_mc_override_demo.cpp  solo_mc_power_demo.cpp  solo_mc_stop_demo.cpp  solo_mc_torque_control.cpp  symg_servo_rtmotion_test.cpp  symg_servo_test.cpp
libraries/edge-control-libraries/rt-data-agent/libshm/: CMakeLists.txt  README.md
libraries/edge-control-libraries/rt-data-agent/libshm/src/: CMakeLists.txt  shmringbuf.c  shmringbuf.h
libraries/edge-control-libraries/rt-data-agent/libshm/test/: CMakeLists.txt  rt2nonrt_test.c  shm_test.c  sim_rt_send.c  test-libshm_fuzztest.cpp
libraries/robotics-ai-libraries/motion-control-gateway/amr/agvm_plcshm/: CMakeLists.txt  package.xml
libraries/robotics-ai-libraries/motion-control-gateway/amr/agvm_plcshm_acrn/: CMakeLists.txt  package.xml
libraries/robotics-ai-libraries/motion-control-gateway/amr/nav2_pose_setter/: CMakeLists.txt  package.xml
libraries/robotics-ai-libraries/orb-extractor/: CMakeLists.txt  README.md  README.md.external  orblze.pc.in  orblzeConfig.cmake.in
libraries/robotics-ai-libraries/orb-extractor/cmake/: config.h.in
libraries/robotics-ai-libraries/orb-extractor/debian/: changelog  control  liborb-lze-dev.install  liborb-lze.config.in  liborb-lze.install.in  liborb-lze.postinst.in  liborb-lze.templates.in  orb-extractor-lze-test.install  rules
libraries/robotics-ai-libraries/orb-extractor/debian/source/: options
libraries/robotics-ai-libraries/orb-extractor/include/: orb_extractor.h  orb_type.h
libraries/robotics-ai-libraries/orb-extractor/samples/: CMakeLists.txt  cmd_parser.h  main.cpp  tutorial.md
libraries/robotics-ai-libraries/orb-extractor/src/: orb_extractor.cpp  orb_extractor_impl.h  orb_extractor_node.h  orb_point_pairs.h
libraries/robotics-ai-libraries/orb-extractor/src/gpu/: cm_base.cpp  cm_base.h  cm_utils.h  device_base.h  device_buffer.h  device_image.h  fast.cpp  fast.h  fastclear_genx.cpp  fastext_genx.cpp  fastnmsext_genx.cpp  gaussian.cpp  gaussian.h  gaussian_genx.cpp  gpu_kernels.cpp  gpu_kernels.h  kernel_base.h  l0_rt_helpers.h  orb.h  orb_descriptor.cpp  orb_descriptor.h  (+4 more)
libraries/robotics-ai-libraries/orb-extractor/tests/: CMakeLists.txt  DownloadProject.cmake
sample-applications/plcopen-benchmark/: .gitignore  CMakeLists.txt  README.md  launch.sh  plot_histogram.py  plot_time_series.py  setup_pmu.sh
sample-applications/plcopen-benchmark/include/: break_trace.hpp  perf_event_count.hpp
sample-applications/plcopen-benchmark/src/: CMakeLists.txt  break_trace.cpp  perf_event_count.cpp
sample-applications/plcopen-benchmark/test/: CMakeLists.txt  plcopen_benchmark.cpp
sample-applications/plcopen-databus/: .gitignore  CMakeLists.txt  README.md  find_libshm.cmake  inovance_duo.xml
sample-applications/plcopen-databus/include/: plc_rt_common.hpp
sample-applications/plcopen-databus/src/: CMakeLists.txt  plc_rt_amr.cpp  plc_rt_amr_rtmotion.cpp  plc_rt_amr_rtmotion_symg.cpp  plc_rt_hiwin_arm_rtmotion.cpp  plc_rt_pos_rtmotion.cpp  plc_rt_robot_arm.cpp  plc_rt_robot_arm_rtmotion.cpp  plc_rt_rrbot.cpp  plc_rt_rrbot_igh.cpp
sample-applications/plcopen-databus/test/: CMakeLists.txt  nrt.cpp  rt.cpp  test-plcopen-databus_fuzztest.cpp
(+665 files in other folders)
